<resources>
    <string name="app_name">Donut</string>
    <!-- client_id 그대로 붙여넣어야 함. 안 그러면 com.google.android.gms.common.api.ApiException: 10 에러 뜸 -->
    <string name="google_login_client_id">959647553332-qghuan78htcaa776tj4nd5q8hdt8vtva.apps.googleusercontent.com</string>

    <!-- Common -->
    <string name="dollar">₩</string>
    <string name="eleven">7 ELEVEN</string>
    <string name="cu">CU</string>
    <string name="gs25">GS 25</string>
    <string name="days">D</string>
    <string name="used">used</string>
    <string name="unused">unused</string>

    <!-- SignActivity -->
    <string name="sign_title">Donuts for Donation</string>
    <string name="sign_google">Sign in with Google</string>
    <string name="sign_giver">giver</string>
    <string name="sign_receiver">receiver</string>
    <string name="sign_username">Username</string>
    <string name="sign_password">Password</string>
    <string name="sign_login">Login</string>
    <string name="sign_create">Create account</string>

    <!-- SignUpActivity -->
    <string name="sign_up_title">Sign up for Donut</string>
    <string name="sign_up_username">Enter your Username.</string>
    <string name="sign_up_password">Enter your Password.</string>
    <string name="sign_up_confirm">Confirm Password.</string>
    <string name="sign_up_continue">Continue</string>
    <string name="sign_up_check">Check for the availability of the username.</string>
    <string name="sign_up_create">Create account</string>

    <!-- SignUpConfirmActivity -->
    <string name="sign_up_confirm_title">We have to\nconfirm your\nstatus</string>
    <string name="sign_up_confirm_upload">Upload</string>
    <string name="sign_up_confirm_welcome">Welcome!</string>

    <!--MainActivity-->
    <string name="menu_wallet">Wallet</string>
    <string name="menu_history">History</string>
    <string name="menu_ranking">Ranking</string>
    <string name="menu_my_page">My</string>

    <!--Donation-->
    <string name="donation_start_title">Hi!\nNow you can\nadd your gifticons\nto our donut</string>
    <string name="donation_start_wallet">Add gifticon to wallet</string>
    <string name="donation_start_donate">Donate directly</string>
    <string name="donation_title">Let\'s start\nthe Donation!</string>
    <string name="donation_upload">Upload</string>
    <string name="donation_donate">Donate</string>
    <string name="donation_complete">Complete</string>
    <string name="donation_amount">Amount</string>
    <string name="donation_name">Name</string>
    <string name="donation_due_date">Due date</string>
    <string name="donation_exchange_store">Exchange store</string>
    <string name="donation_image">Image</string>
    <string name="donation_chose">chose an exchange store</string>
    <string name="donation_agree_title">Do you agree with\nauto donation?</string>
    <string name="donation_agree_content1">Do you agree that</string>
    <string name="donation_agree_content2">  \'gifticons with 30 days  </string>
    <string name="donation_agree_content3">  remaining validity\'  </string>
    <string name="donation_agree_content4">will be automatically donated?</string>
    <string name="donation_agree_agree">Sure, agree</string>
    <string name="donation_agree_disagree">Sorry, disagree</string>
    <string name="donation_done">You\'ve done!</string>
    <string name="donation_resolution">high resolution</string>

    <!-- Receive -->
    <string name="receive_title">Let\'s get\nthe donut box!</string>
    <string name="receive_title2">1. Chose the exchange store</string>
    <string name="receive_title3">2. Please enter the amount</string>
    <string name="receive_find">find the exchange store near you</string>
    <string name="receive_amount">the amount</string>
    <string name="receive_left">the left amount of this month is</string>
    <string name="receive_done">Done</string>

    <!--GiverHomeFragment-->
    <string name="giverHome_title">Today,</string>
    <string name="giverHome_title2">children</string>
    <string name="giverHome_title3">are still hungry.</string>
    <string name="giverHome_donated">you donate</string>
    <string name="giverHome_need">while we need</string>

    <!-- ReceiverHomeFragment-->
    <string name="receiverHome_title">Now you can ask for\na donut box!</string>
    <string name="receiverHome_total">This month\'s total for\nthe donut box is</string>
    <string name="receiverHome_amount">amount  |</string>
    <string name="receiverHome_due">due date  |</string>
    <string name="receiverHome_report">report</string>

    <!-- GiverWalletFragment -->
    <string name="giverWallet_donate_title">Donate your donuts!</string>
    <string name="giverWallet_donate">Donate</string>

    <!-- WalletDetailFragment -->
    <string name="walletDetail_used">Click when used</string>
    <string name="walletDetail_unused">Click when unused</string>

    <!--HistoryFragment-->
    <string name="history_title">History</string>
    <string name="giverHistory_title">You have been donating</string>
    <string name="giverHistory_title2">for</string>
    <string name="giverHistory_years">years!</string>
    <string name="giverHistory_year">year!</string>
    <string name="giverHistory_total">Your total donation is</string>
    <string name="giverHistory_unreceived">unreceived</string>
    <string name="giverHistory_received">received</string>
    <string name="giverHistory_msg">msg</string>
    <string name="giverHistory_givenDay">the day you give</string>
    <string name="giverHistory_to">to</string>
    <string name="giverHistory_receivedMsg">the message\nyou received</string>
    <string name="giverHistory_NoReceivedMsg">haven’t\nreceived yet</string>

    <!-- ReceiverHistoryFragment -->
    <string name="receiverHistory_title">Total received\ndonation is</string>
    <string name="receiverHistory_per">/</string>

    <!-- RankingFragment-->
    <string name="ranking_title">Check Today\'s</string>
    <string name="ranking_title2">Ranking</string>
    <string name="ranking_title3">for fun!</string>
    <string name="ranking_sum">SUM</string>
    <string name="ranking_number">NUMBER</string>

    <!-- MypageFragment -->
    <string name="Mypage_history">History / Message</string>
    <string name="Mypage_service">Terms of service</string>
    <string name="Mypage_open_source">Open source</string>
    <string name="Mypage_about">About</string>

    <!-- Message -->
    <string name="message_title">Send a message\nto GIVER</string>
    <string name="message_thanks">Thanks for your help!</string>
    <string name="message_lifesaver">You are a lifesaver :)</string>
    <string name="message_emoticon">😘</string>
    <string name="message_etc">etc</string>
    <string name="message_send">Send a message</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_receive_maps">ReceiveMapsActivity</string>

</resources>