<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ranking.RankingFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="85dp"
        android:fontFamily="@font/pretendard_semibold"
        android:text="@string/ranking_title"
        android:textColor="@color/black_100"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendard_semibold"
        android:text="@string/ranking_title2"
        android:textColor="@color/main_coral"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_title3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/pretendard_semibold"
        android:text="@string/ranking_title3"
        android:textColor="@color/black_100"
        android:textSize="28sp"
        app:layout_constraintStart_toEndOf="@+id/tv_title2"
        app:layout_constraintTop_toTopOf="@+id/tv_title2" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tl_menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title3"
        app:tabIndicatorColor="@color/main_coral"
        app:tabSelectedTextColor="@color/main_coral"
        app:tabTextColor="@color/gray_200"
        tools:ignore="SpeakableTextPresentCheck"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_items"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tl_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>